# solax-mon

./: .gitignore  Cargo.toml  Dockerfile  README.md  init.sh  py-test.py  srv.py
old-py/: grid.py  srv.py
old-py/web/: web.py
old-py/web/static/css/: style.css
old-py/web/templates/: dashboard.html
src/: main.rs
web/static/js/: script.js
